test/files/neg/t3224.check
t3224.scala:30: error: polymorphic expression cannot be instantiated to expected type;
 found   : [T]Array[T]
 required: List[?]
    println(Texts textL Array())
                             ^
t3224.scala:34: error: type mismatch;
 found   : List[Nothing]
 required: Array[?]
    println(Texts textA List())
                            ^
t3224.scala:35: error: type mismatch;
 found   : List[Int]
 required: Array[?]
    println(Texts textA List(1))
                            ^
t3224.scala:36: error: type mismatch;
 found   : List[Int]
 required: Array[?]
    println(Texts textA List(1, 1));
                            ^
t3224.scala:48: error: polymorphic expression cannot be instantiated to expected type;
 found   : [T]Array[T]
 required: List[?]
    assert(size(Array()) == 0)
                     ^
5 errors found
